[metadata]
name = egta
version = attr: egta.__version__
description = Scripts to perform EGTA
long_description = file: README.md
url = https://github.com/egtaonline/quiesce.git
author = Strategic Reasoning Group
author_email = strategic.reasoning.group@umich.edu
license = Apache 2.0

[options]
install_requires =
    gameanalysis~=5.0.0
    egtaonlineapi==0.3.0
    numpy~=1.13
packages =
    egta
    egta.script

[options.extras_require]
dev =
    autopep8~=1.2
    flake8~=3.0
    ipython~=5.2
    mock~=2.0
    pytest-cov~=2.3
    pytest-timeout~=1.2
    pytest-xdist~=1.15
    pytest~=3.0
    sphinx~=1.6.6
    twine~=1.9
    wheel~=0.29

[options.entry_points]
console_scripts =
    egta=egta.__main__:main

[tool:pytest]
addopts = -rs -nauto --strict --showlocals --cov-report term-missing --duration 5 -m 'not egta and not long'
filterwarnings = error
markers =
    egta: requires egta to run.
    long: takes forever to run.

[build_sphinx]
source-dir = sphinx
build-dir = sphinx/build
warning-is-error = true

[coverage:run]
branch = True
