[metadata]
name = egta
version = attr: egta.__version__
description = Scripts to perform EGTA
long_description = file: README.md
url = https://github.com/egtaonline/quiesce.git
author = Strategic Reasoning Group
author_email = strategic.reasoning.group@umich.edu
license = Apache 2.0

[options]
install_requires =
    gameanalysis~=5.4
    egtaonlineapi==0.4.0
    numpy~=1.14
packages =
    egta
    egta.script

[options.extras_require]
dev =
    autopep8~=1.2
    flake8~=3.0
    ipython~=5.2
    pytest-cov~=2.5
    pytest-timeout~=1.2
    pytest-xdist~=1.22
    pytest~=3.4
    sphinx~=1.7
    timeout-decorator~=0.4
    twine~=1.9
    wheel~=0.29

[options.entry_points]
console_scripts =
    egta=egta.__main__:main_entry_point

[tool:pytest]
addopts = -rs -nauto --strict --showlocals --cov-report term-missing --duration 5 -m 'not long'
filterwarnings = error
markers =
    long: takes forever to run.

[build_sphinx]
source-dir = sphinx
build-dir = sphinx/build
warning-is-error = true

[coverage:run]
branch = True
