[metadata]
name = egta
version = attr: egta.__version__
description = Scripts to perform EGTA
long_description = file: README.md
url = https://github.com/egtaonline/quiesce.git
author = Strategic Reasoning Group
author_email = strategic.reasoning.group@umich.edu
license = Apache 2.0

[options]
install_requires =
    gameanalysis~=8.1.0
    egtaonlineapi==0.8.7
    numpy~=1.18.0
packages =
    egta
    egta.script

[options.extras_require]
dev =
    ipython~=7.19
    pylint-quotes~=0.2
    pylint~=2.6
    pytest-asyncio~=0.14
    pytest-cov~=2.10
    pytest-env~=0.6
    pytest-timeout~=1.4
    pytest-xdist~=2.1
    pytest~=6.1
    sphinx~=1.7
    timeout-decorator~=0.4
    twine~=3.2
    wheel~=0.35

[options.entry_points]
console_scripts =
    egta=egta.__main__:main

[tool:pytest]
addopts = -rs -nauto --strict --showlocals --cov-report term-missing --durations 5 -m 'not long'
markers =
    long: takes forever to run.
env =
    PYTHONASYNCIODEBUG = 1

[build_sphinx]
source-dir = sphinx
build-dir = sphinx/build
warning-is-error = true

[coverage:run]
branch = True
